Fri Jan  1 21:58:40 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* glib.h:
	(g_strdup_a, g_strndup_a): Handle NULL strings like g_strdup.
	s/g_strconcat_a/g_strconcat3_a/ to reflect fixed number of args

	* testglib.c:
	Added g_strdup, g_strconcat checks.
	Added str==NULL checks for alloca string macros.
	s/g_strconcat_a/g_strconcat3_a/

Fri Jan  1 18:30:41 PST 1999 Manish Singh <yosh@gimp.org>

	* testglib.c: made the alloca tests follow the testglib style

	* Makefile.am: minor cleanups, mostly cosmetic

Fri Jan  1 20:43:19 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* glib.h: added g_strndup_a macro

	* testglib.c:
	Added tests for new alloca-based string routines.
	Reformatted a couple strings.

Sat Jan  2 02:20:59 1999  Tim Janik  <timj@gtk.org>

	* ghook.c:
	(g_hook_list_invoke): 
	(g_hook_list_invoke_check): 
	(g_hook_list_marshal_check): 
	(g_hook_list_marshal): avoid unneccessary extra hook referencing (the
	explicit hook referencing became unneccessarry with my changes from
	Mon Dec 21 21:48:29 1998).

	* gmain.c (g_main_iterate): fixed reference counting leaks with
 	premature loop aborts.

Fri Jan  1 22:47:44 1999  Tim Janik  <timj@gtk.org>

	* gscanner.c (g_scanner_unexp_token): handle G_TOKEN_IDENTIFIER_NULL
	as G_TOKEN_IDENTIFIER.

Fri Jan  1 17:09:19 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in, glib.h:
	Added two new alloca-based function macros, g_strdup_a and
	g_strconcat_a.	These are stack-based and much faster than
	their g_malloc-based counterparts.  Kudos to Ulrich Drepper
	for help on this one.

Wed Dec 30 18:24:57 CST 1998 Shawn T. Amundson <amundson@gtk.org>

        * Released GLib 1.1.11 

        * INSTALL:
          NEWS:
          README:
          configure.in:
          docs/glib-config.1: version=1.1.11

1998-12-30  Raja R Harinath  <harinath@cs.umn.edu>

	* glib.h (G[U]INT64_FROM_{LE,BE}): 
	Define to G[U]INT64_TO_{LE,BE}, not G[U]INT32_TO_{LE,BE}.

Fri Dec 25 19:56:33 PST 1998 Manish Singh <yosh@gimp.org>
