@@ -1,3 +1,7 @@
+Sat Jan  2 16:45:44 EST 1999  Jeff Garzik  <jgarzik@pobox.com>
+
+	* testglib.c: Added g_strdup_printf check.
+
 Fri Jan  1 21:58:40 EST 1999  Jeff Garzik  <jgarzik@pobox.com>
 
 	* glib.h:
